--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: #faf3e0;
             min-height: 100vh;
             padding: 20px;
         }
@@ -32,12 +32,14 @@
         header h1 {
             font-size: 3em;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+            color: #333;
         }
 
         header p {
             font-size: 1.2em;
             opacity: 0.9;
+            color: #555;
         }
 
         .upload-section {
@@ -181,7 +183,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>✨ My Decor Business ✨</h1>
+            <h1>Myna Backdrops & Decor Rental Catalogue</h1>
             <p>Beautiful spaces, beautifully captured</p>
         </header>
 
