--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: #f7e7ce;
+            background: #faf3e0;
             min-height: 100vh;
             display: flex;
             justify-content: center;
