--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             display: inline-block;
             cursor: pointer;
             transition: all 0.3s;
+            margin: 0 15px;
         }
 
         .view-catalog-btn img {
@@ -50,6 +51,36 @@
 
         .view-catalog-btn:hover img {
             transform: scale(1.05);
+        }
+
+        .nav-buttons {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+
+        .nav-btn {
+            background: #c41e3a;
+            color: white;
+            padding: 15px 40px;
+            border: none;
+            border-radius: 30px;
+            font-size: 1.2em;
+            font-weight: bold;
+            cursor: pointer;
+            text-decoration: none;
+            display: inline-block;
+            transition: all 0.3s;
+            box-shadow: 0 3px 15px rgba(196, 30, 58, 0.3);
+        }
+
+        .nav-btn:hover {
+            background: #a01829;
+            transform: translateY(-3px);
+            box-shadow: 0 5px 20px rgba(196, 30, 58, 0.4);
         }
 
         .social {
@@ -101,6 +132,11 @@
         <a href="catalog.html" class="view-catalog-btn">
             <img src="images/catalogue_tab_image.png" alt="View Catalogue">
         </a>
+
+        <div class="nav-buttons">
+            <a href="contact.html" class="nav-btn">Contact</a>
+            <a href="prices.html" class="nav-btn">Prices</a>
+        </div>
         
         <div class="social">
             <p>@mynabackdrops</p>
