--- a/index.html
+++ b/index.html
@@ -29,58 +29,35 @@
         .logo {
             width: 400px;
             height: auto;
-            margin-bottom: 40px;
+            margin-bottom: 50px;
         }
 
-        .catalog-cover {
-            display: none;
-        }
-
-        .view-catalog-btn {
-            display: inline-block;
-            cursor: pointer;
-            transition: all 0.3s;
-            margin: 0 15px;
-        }
-
-        .view-catalog-btn img {
-            width: 300px;
-            height: auto;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .view-catalog-btn:hover img {
-            transform: scale(1.05);
-        }
-
-        .nav-buttons {
+        .buttons-container {
             display: flex;
             justify-content: center;
             align-items: center;
+            gap: 30px;
             flex-wrap: wrap;
-            gap: 20px;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
+        .view-catalog-btn,
         .nav-btn {
-            background: #c41e3a;
-            color: white;
-            padding: 15px 40px;
-            border: none;
-            border-radius: 30px;
-            font-size: 1.2em;
-            font-weight: bold;
-            cursor: pointer;
-            text-decoration: none;
             display: inline-block;
+            cursor: pointer;
             transition: all 0.3s;
-            box-shadow: 0 3px 15px rgba(196, 30, 58, 0.3);
         }
 
-        .nav-btn:hover {
-            background: #a01829;
-            transform: translateY(-3px);
-            box-shadow: 0 5px 20px rgba(196, 30, 58, 0.4);
+        .view-catalog-btn img,
+        .nav-btn img {
+            width: 280px;
+            height: auto;
+            transition: transform 0.3s;
+        }
+
+        .view-catalog-btn:hover img,
+        .nav-btn:hover img {
+            transform: scale(1.05);
         }
 
         .social {
@@ -129,13 +106,16 @@
     <div class="container">
         <img src="images/logo.png" alt="Myna Logo" class="logo">
         
-        <a href="catalog.html" class="view-catalog-btn">
-            <img src="images/catalogue_tab_image.png" alt="View Catalogue">
-        </a>
-
-        <div class="nav-buttons">
-            <a href="contact.html" class="nav-btn">Contact</a>
-            <a href="prices.html" class="nav-btn">Prices</a>
+        <div class="buttons-container">
+            <a href="catalog.html" class="view-catalog-btn">
+                <img src="images/catalogue_tab_image.png" alt="View Catalogue">
+            </a>
+            <a href="contact.html" class="nav-btn">
+                <img src="images/contact_tab_image.png" alt="Contact">
+            </a>
+            <a href="prices.html" class="nav-btn">
+                <img src="images/prices_tab_image.png" alt="Prices">
+            </a>
         </div>
         
         <div class="social">
