--- a/favor-wall.html
+++ b/favor-wall.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favor Wall - Myna</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,7 +13,7 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             background: #faf3e0;
             min-height: 100vh;
             padding: 20px;
@@ -146,8 +147,9 @@
     <script>
         // Images stored in GitHub - add your image paths here
         const items = [
-            // Example: { type: 'image', src: 'images/favor-wall/image1.jpg' },
-            // Example: { type: 'video', src: 'images/favor-wall/video1.mp4' },
+            { type: 'image', src: 'images/favor-wall/1fc01f42-2dbb-472f-9578-e3c0f384a053.jpg' },
+            { type: 'video', src: 'images/favor-wall/7ab01404-753b-4c6b-8fdc-99e04c4f048d.mp4' },
+            { type: 'video', src: 'images/favor-wall/att.oilPquj66lAXXcq3eRMV2usuMnCkeSz2MBDaAsttwX4.mp4' }
         ];
 
         window.onload = function() {
