--- a/rippled-arch.html
+++ b/rippled-arch.html
@@ -126,7 +126,6 @@
 
     <script>
         const items = [
-            { type: 'video', src: 'images/rippled-arch/84c2c3e5ed4c440ab9ef50842c9f9210.mp4' },
             { type: 'image', src: 'images/rippled-arch/IMG_0205.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_0520.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_0521.jpg' },
@@ -137,18 +136,15 @@
             { type: 'image', src: 'images/rippled-arch/IMG_2389.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_2945.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_2997.jpg' },
-            { type: 'video', src: 'images/rippled-arch/IMG_7190.mp4' },
             { type: 'image', src: 'images/rippled-arch/IMG_7447.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_7496.jpg' },
-            { type: 'video', src: 'images/rippled-arch/IMG_7772.mp4' },
             { type: 'image', src: 'images/rippled-arch/IMG_7775.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_7864.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_7890.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_7909.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_9235.jpg' },
             { type: 'image', src: 'images/rippled-arch/IMG_9291.jpg' },
-            { type: 'image', src: 'images/rippled-arch/IMG_9635.jpg' },
-            { type: 'video', src: 'images/rippled-arch/copy_28EA56E4-E10B-4AEE-BC87-31C649B5DA0B.mp4' }
+            { type: 'image', src: 'images/rippled-arch/IMG_9635.jpg' }
         ];
 
         window.onload = function() {
