--- a/index.html
+++ b/index.html
@@ -39,7 +39,41 @@
             align-items: center;
             gap: 30px;
             flex-wrap: wrap;
-            margin-bottom: 40px;
+            margin-bottom: 60px;
+        }
+
+        .carousel-container {
+            width: 100%;
+            max-width: 900px;
+            margin: 0 auto 50px;
+            overflow: hidden;
+            border-radius: 20px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.15);
+        }
+
+        .carousel-track {
+            display: flex;
+            animation: slide 60s linear infinite;
+        }
+
+        .carousel-item {
+            min-width: 100%;
+            height: 500px;
+        }
+
+        .carousel-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        @keyframes slide {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-2300%); }
+        }
+
+        .carousel-track:hover {
+            animation-play-state: paused;
         }
 
         .view-catalog-btn,
@@ -117,6 +151,34 @@
             <a href="prices.html" class="nav-btn">
                 <img src="images/prices_tab_image.png" alt="Prices">
             </a>
+        </div>
+
+        <div class="carousel-container">
+            <div class="carousel-track">
+                <div class="carousel-item"><img src="images/feature1.jpg" alt="Featured setup 1"></div>
+                <div class="carousel-item"><img src="images/feature2.jpg" alt="Featured setup 2"></div>
+                <div class="carousel-item"><img src="images/feature3.jpg" alt="Featured setup 3"></div>
+                <div class="carousel-item"><img src="images/feature4.jpg" alt="Featured setup 4"></div>
+                <div class="carousel-item"><img src="images/feature5.jpg" alt="Featured setup 5"></div>
+                <div class="carousel-item"><img src="images/feature6.jpg" alt="Featured setup 6"></div>
+                <div class="carousel-item"><img src="images/feature7.jpg" alt="Featured setup 7"></div>
+                <div class="carousel-item"><img src="images/feature8.jpg" alt="Featured setup 8"></div>
+                <div class="carousel-item"><img src="images/feature9.jpg" alt="Featured setup 9"></div>
+                <div class="carousel-item"><img src="images/feature10.jpg" alt="Featured setup 10"></div>
+                <div class="carousel-item"><img src="images/feature11.jpg" alt="Featured setup 11"></div>
+                <div class="carousel-item"><img src="images/feature12.jpg" alt="Featured setup 12"></div>
+                <div class="carousel-item"><img src="images/feature13.jpg" alt="Featured setup 13"></div>
+                <div class="carousel-item"><img src="images/feature14.jpg" alt="Featured setup 14"></div>
+                <div class="carousel-item"><img src="images/feature15.jpg" alt="Featured setup 15"></div>
+                <div class="carousel-item"><img src="images/feature16.jpg" alt="Featured setup 16"></div>
+                <div class="carousel-item"><img src="images/feature17.jpg" alt="Featured setup 17"></div>
+                <div class="carousel-item"><img src="images/feature18.jpg" alt="Featured setup 18"></div>
+                <div class="carousel-item"><img src="images/feature19.jpg" alt="Featured setup 19"></div>
+                <div class="carousel-item"><img src="images/feature20.jpg" alt="Featured setup 20"></div>
+                <div class="carousel-item"><img src="images/feature21.jpg" alt="Featured setup 21"></div>
+                <div class="carousel-item"><img src="images/feature22.jpg" alt="Featured setup 22"></div>
+                <div class="carousel-item"><img src="images/feature23.jpg" alt="Featured setup 23"></div>
+            </div>
         </div>
         
         <div class="social">
