--- a/catalog.html
+++ b/catalog.html
@@ -47,15 +47,15 @@
             margin-bottom: 50px;
         }
 
-        header h1 {
-            font-size: 3em;
-            color: #c41e3a;
-            margin-bottom: 10px;
+        header img {
+            max-width: 600px;
+            width: 100%;
+            height: auto;
         }
 
+        header h1,
         header p {
-            font-size: 1.2em;
-            color: #555;
+            display: none;
         }
 
         .menu-grid {
@@ -115,8 +115,7 @@
         <a href="index.html" class="back-btn">← Back to Home</a>
         
         <header>
-            <h1>Myna Catalogue</h1>
-            <p>Choose a category to explore</p>
+            <img src="images/explore.png" alt="Explore Our Catalogue">
         </header>
 
         <div class="menu-grid">
