--- a/contact.html
+++ b/contact.html
@@ -44,24 +44,24 @@
         }
 
         .contact-card {
-            background: white;
+            background: transparent;
             border-radius: 20px;
             padding: 60px 40px;
             text-align: center;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.1);
+            box-shadow: none;
             margin-top: 40px;
         }
 
-        .contact-card h1 {
-            font-size: 3em;
-            color: #c41e3a;
-            margin-bottom: 20px;
+        .contact-card .header-img {
+            max-width: 500px;
+            width: 100%;
+            height: auto;
+            margin-bottom: 40px;
         }
 
-        .contact-card p {
-            font-size: 1.2em;
-            color: #666;
-            margin-bottom: 50px;
+        .contact-card h1,
+        .contact-card > p {
+            display: none;
         }
 
         .contact-info {
@@ -72,53 +72,49 @@
         }
 
         .contact-item {
-            background: #faf3e0;
-            padding: 30px;
+            background: transparent;
+            padding: 0;
             border-radius: 15px;
             transition: all 0.3s;
         }
 
         .contact-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+            transform: scale(1.05);
         }
 
-        .contact-item .icon {
-            font-size: 3em;
-            margin-bottom: 15px;
+        .contact-item img {
+            width: 100%;
+            max-width: 500px;
+            height: auto;
+            border-radius: 15px;
+            cursor: pointer;
         }
 
-        .contact-item h3 {
-            font-size: 1.3em;
-            color: #c41e3a;
-            margin-bottom: 10px;
-        }
-
+        .contact-item .icon,
+        .contact-item h3,
         .contact-item a {
-            font-size: 1.3em;
-            color: #333;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .contact-item a:hover {
-            color: #c41e3a;
+            display: none;
         }
 
         .social-link {
             margin-top: 40px;
-            font-size: 1.2em;
-            color: #666;
         }
 
+        .social-link img {
+            max-width: 500px;
+            width: 100%;
+            height: auto;
+            cursor: pointer;
+            transition: transform 0.3s;
+        }
+
+        .social-link img:hover {
+            transform: scale(1.05);
+        }
+
+        .social-link p,
         .social-link a {
-            color: #c41e3a;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .social-link a:hover {
-            text-decoration: underline;
+            display: none;
         }
 
         @media (max-width: 768px) {
@@ -141,26 +137,21 @@
         <a href="index.html" class="back-btn">← Back to Home</a>
         
         <div class="contact-card">
-            <h1>Get In Touch</h1>
-            <p>We'd love to hear from you! Reach out to us for bookings and inquiries.</p>
+            <img src="images/6.png" alt="Get In Touch" class="header-img">
 
             <div class="contact-info">
-                <div class="contact-item">
-                    <div class="icon">📧</div>
-                    <h3>Email</h3>
-                    <a href="mailto:mynadecorstudio@gmail.com">mynadecorstudio@gmail.com</a>
-                </div>
+                <a href="mailto:mynadecorstudio@gmail.com" class="contact-item">
+                    <img src="images/3.png" alt="Email Us">
+                </a>
 
-                <div class="contact-item">
-                    <div class="icon">📞</div>
-                    <h3>Phone</h3>
-                    <a href="tel:+14169976627">+1 416-997-6627</a>
-                </div>
+                <a href="tel:+14169976627" class="contact-item">
+                    <img src="images/4.png" alt="Call Us">
+                </a>
             </div>
 
-            <div class="social-link">
-                <p>Follow us on Instagram: <a href="https://instagram.com/mynabackdrops" target="_blank">@mynabackdrops</a></p>
-            </div>
+            <a href="https://instagram.com/mynabackdrops" target="_blank" class="social-link">
+                <img src="images/5.png" alt="Instagram">
+            </a>
         </div>
     </div>
 </body>
