--- a/rippled-arch.html
+++ b/rippled-arch.html
@@ -25,22 +25,20 @@
         }
 
         .back-btn {
-            background: #c41e3a;
-            color: white;
-            padding: 10px 25px;
-            border: none;
-            border-radius: 25px;
-            font-size: 1em;
-            cursor: pointer;
-            margin-bottom: 20px;
-            text-decoration: none;
             display: inline-block;
+            cursor: pointer;
             transition: all 0.3s;
+            margin-bottom: 20px;
         }
 
-        .back-btn:hover {
-            background: #a01829;
-            transform: translateY(-2px);
+        .back-btn img {
+            width: 150px;
+            height: auto;
+            transition: transform 0.3s;
+        }
+
+        .back-btn:hover img {
+            transform: scale(1.05);
         }
 
         .gallery {
@@ -114,7 +112,9 @@
 </head>
 <body>
     <div class="container">
-        <a href="catalog.html" class="back-btn">← Back to Menu</a>
+        <a href="catalog.html" class="back-btn">
+            <img src="images/7.png" alt="Back to Menu">
+        </a>
         
         <div class="gallery" id="gallery"></div>
     </div>
