--- a/favor-wall.html
+++ b/favor-wall.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Category - Myna</title>
+    <title>Favor Wall - Myna</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -120,6 +120,10 @@
         }
 
         @media (max-width: 768px) {
+            header h1 {
+                font-size: 2em;
+            }
+            
             .gallery {
                 grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
             }
@@ -141,10 +145,8 @@
     </div>
 
     <script>
-        // Add your images here - example:
         const items = [
-            // { type: 'image', src: 'images/category-name/image1.jpg' },
-            // { type: 'image', src: 'images/category-name/image2.jpg' },
+            { type: 'image', src: 'images/favor-wall/1fc01f42-2dbb-472f-9578-e3c0f384a053.jpg' }
         ];
 
         window.onload = function() {
