--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         .logo {
             width: 400px;
             height: auto;
+            margin-bottom: 30px;
+        }
+
+        .slogan {
+            max-width: 600px;
+            width: 100%;
+            height: auto;
             margin-bottom: 50px;
         }
 
@@ -101,6 +108,13 @@
             color: #333;
         }
 
+        .footer-image {
+            max-width: 800px;
+            width: 100%;
+            height: auto;
+            margin-top: 50px;
+        }
+
         .contact {
             margin-top: 20px;
         }
@@ -112,7 +126,7 @@
         }
 
         .phone-link img {
-            width: 300px;
+            width: 450px;
             height: auto;
             transition: transform 0.3s;
         }
@@ -136,6 +150,7 @@
 <body>
     <div class="container">
         <img src="images/logo.png" alt="Myna Logo" class="logo">
+        <img src="images/slogan.png" alt="Slogan" class="slogan">
         
         <div class="buttons-container">
             <a href="catalog.html" class="view-catalog-btn">
@@ -186,6 +201,8 @@
                 <img src="images/callus.png" alt="Call Us">
             </a>
         </div>
+
+        <img src="images/8.png" alt="Footer" class="footer-image">
     </div>
 </body>
 </html>
