--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myna Catalogue Menu</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,7 +13,7 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Montserrat', sans-serif;
             background: #faf3e0;
             min-height: 100vh;
             padding: 20px;
@@ -31,7 +32,7 @@
         }
 
         .back-btn img {
-            width: 150px;
+            width: 250px;
             height: auto;
             transition: transform 0.3s;
         }
