--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 
         .carousel-container {
             width: 100%;
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 0 auto 50px;
             position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 20px;
-            padding: 40px 20px;
+            padding: 40px 150px;
         }
 
         .carousel-preview {
@@ -98,8 +98,8 @@
 
         .carousel-arrow {
             position: absolute;
-            width: 80px;
-            height: 80px;
+            width: 120px;
+            height: 120px;
             cursor: pointer;
             z-index: 10;
             transition: transform 0.3s;
@@ -110,11 +110,11 @@
         }
 
         .carousel-arrow.left {
-            left: 0;
+            left: 10px;
         }
 
         .carousel-arrow.right {
-            right: 0;
+            right: 10px;
         }
 
         @media (max-width: 1024px) {
