--- a/contact.html
+++ b/contact.html
@@ -153,6 +153,10 @@
                     <img src="images/Bookingform.png" alt="Booking Form">
                 </a>
 
+                <a href="https://g.page/r/CX4QMBPQkPs8EBI/review" target="_blank" class="booking-btn">
+                    <img src="images/review.png" alt="Review Us on Google">
+                </a>
+
                 <a href="https://instagram.com/mynabackdrops" target="_blank" class="social-link">
                     <img src="images/5.png" alt="Instagram">
                 </a>
