--- a/prices.html
+++ b/prices.html
@@ -55,6 +55,7 @@
             height: auto;
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
             border-radius: 15px;
+            margin-bottom: 40px;
         }
 
         @media (max-width: 768px) {
@@ -77,6 +78,8 @@
         <img src="images/price.png" alt="Prices" class="price-logo">
         
         <img src="images/price1.png" alt="Price List" class="price-list">
+        
+        <img src="images/price2.png" alt="Additional Prices" class="price-list">
     </div>
 </body>
 </html>
