--- a/index.html
+++ b/index.html
@@ -231,17 +231,20 @@
 <body>
     <div class="container">
         <img src="images/logo.png" alt="Myna Logo" class="logo">
-        <img src="images/slogan.png" alt="Slogan" class="slogan">
+        <img src="images/slogan2.png" alt="Slogan" class="slogan">
         
         <div class="buttons-container">
             <a href="catalog.html" class="view-catalog-btn">
                 <img src="images/catalogue_tab_image.png" alt="View Catalogue">
             </a>
+            <a href="prices.html" class="nav-btn">
+                <img src="images/prices_tab_image.png" alt="Prices">
+            </a>
             <a href="contact.html" class="nav-btn">
                 <img src="images/contact_tab_image.png" alt="Contact">
             </a>
-            <a href="prices.html" class="nav-btn">
-                <img src="images/prices_tab_image.png" alt="Prices">
+            <a href="booking-form.html" class="nav-btn">
+                <img src="images/Bookingform.png" alt="Booking Inquiry">
             </a>
         </div>
 
