--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         .carousel-container {
             width: 100%;
-            max-width: 1400px;
+            max-width: 800px;
             margin: 0 auto 50px;
             display: flex;
             align-items: center;
@@ -62,28 +62,12 @@
         }
 
         .carousel-preview {
-            flex: 0 0 200px;
-            height: 300px;
-            overflow: hidden;
-            border-radius: 15px;
-            opacity: 0.5;
-            transition: opacity 0.3s;
-            cursor: pointer;
-        }
-
-        .carousel-preview:hover {
-            opacity: 0.8;
-        }
-
-        .carousel-preview img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            display: none;
         }
 
         .carousel-main {
-            flex: 0 0 600px;
-            height: 500px;
+            flex: 0 0 500px;
+            height: 350px;
             overflow: hidden;
             border-radius: 20px;
             background: white;
