--- a/favor-wall.html
+++ b/favor-wall.html
@@ -146,7 +146,8 @@
 
     <script>
         const items = [
-            { type: 'image', src: 'images/favor-wall/1fc01f42-2dbb-472f-9578-e3c0f384a053.jpg' }
+            { type: 'image', src: 'images/favor-wall/1fc01f42-2dbb-472f-9578-e3c0f384a053.jpg' },
+            { type: 'image', src: 'images/favor-wall/IMG_6174.jpg' }
         ];
 
         window.onload = function() {
